src/objects/Firm__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Email_Address__c</fullName>
        <label>Accounting Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Accounting_Mailing_Address__c</fullName>
        <label>Accounting Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Accounting_Phone_Number__c</fullName>
        <label>Accounting Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Community_Admin_Email__c</fullName>
        <label>Community Admin Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Community_Footer__c</fullName>
        <label>Community Footer</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Community_Header__c</fullName>
        <label>Community Header</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conga_Image__c</fullName>
        <formula>IMAGE( Logo_URL__c,&apos;Logo&apos; )</formula>
        <label>Conga Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Footer_HTML__c</fullName>
        <label>Email Footer HTML</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Header_HTML__c</fullName>
        <label>Email Header HTML</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exclude_From_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Google_Drive_Folder_Name__c</fullName>
        <label>Google Drive Folder Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_URL__c</fullName>
        <description>This field carries the URL logo of the Firm</description>
        <label>Logo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Production_Email_Address__c</fullName>
        <label>Production Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Production_Region__c</fullName>
        <label>Production Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Units</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rough_Draft_Email__c</fullName>
        <label>Rough Draft Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Email_Address__c</fullName>
        <label>Sales Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Schedule_Deposition_Thank_You_HTML__c</fullName>
        <label>Schedule Deposition Thank You HTML</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scheduling_Email_Address__c</fullName>
        <label>Scheduling Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Video_Email_Address__c</fullName>
        <label>Video Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Web_Page_Footer_HTML__c</fullName>
        <label>Web Page Footer HTML</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Web_Page_Header_HTML__c</fullName>
        <label>Web Page Header HTML</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Firm</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Firm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Firms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>